Bug 104096 - [CI] igt@kms_ccs@pipe-c-crc-primary-rotation-180 - fail - Test assertion failure function try_config - Failed assertion: ret == 0
Summary: [CI] igt@kms_ccs@pipe-c-crc-primary-rotation-180 - fail - Test assertion fail...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: krisman
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-05 07:50 UTC by Marta Löfstedt
Modified: 2017-12-21 13:53 UTC (History)
1 user (show)

See Also:
i915 platform: GLK
i915 features: display/Other


Attachments

Description Marta Löfstedt 2017-12-05 07:50:11 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3452/shard-glkb3/igt@kms_ccs@pipe-c-crc-primary-rotation-180.html

(kms_ccs:3892) CRITICAL: Test assertion failure function try_config, file kms_ccs.c:439:
(kms_ccs:3892) CRITICAL: Failed assertion: ret == 0
(kms_ccs:3892) CRITICAL: Last errno: 22, Invalid argument
(kms_ccs:3892) CRITICAL: error: -22 != 0
Subtest pipe-C-crc-primary-rotation-180 failed.
Comment 1 krisman 2017-12-18 00:49:34 UTC
(In reply to Marta Löfstedt from comment #0)
> https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3452/shard-glkb3/
> igt@kms_ccs@pipe-c-crc-primary-rotation-180.html
> 
> (kms_ccs:3892) CRITICAL: Test assertion failure function try_config, file
> kms_ccs.c:439:
> (kms_ccs:3892) CRITICAL: Failed assertion: ret == 0
> (kms_ccs:3892) CRITICAL: Last errno: 22, Invalid argument
> (kms_ccs:3892) CRITICAL: error: -22 != 0
> Subtest pipe-C-crc-primary-rotation-180 failed.

The log shows:

<7>[   80.778305] [drm:skl_check_plane_surface [i915]] No RC support on pipe C

Which is caused by the verification for pipe C in intel_display.c:skl_check_plane_surface(), which, despite the name, only executes for GEN > 10 or Geminilake.  The important hunk is:

>	if (crtc->pipe == PIPE_C) {
>		DRM_DEBUG_KMS("No RC support on pipe C\n");
>		return -EINVAL;
>	}

What I cannot tell is whether GLK should support RC for pipe C or if the test is bogus.  I don't have the documentation for GLK yet :)

So, I emailed Ben Widawsky at Intel to confirm whether the testcase is bogus or if we need to support pipe_c ccs modifier in the kernel.  I'm waiting on him.
Comment 2 krisman 2017-12-21 13:53:09 UTC
Patch commited:

f0cbd8bd877f ("i915: Reject CCS modifiers for pipe C on Geminilake")

Which solved the issue in CI:

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3561/shard-glkb1/igt@kms_ccs@pipe-c-crc-primary-rotation-180.html


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.